updated copy and title/desc tags

--- a/site/layouts/partials/video.html
+++ b/site/layouts/partials/video.html
@@ -2,3 +2,50 @@
 <!--<div class="mobile-desktop video">-->
 <!--    <div class="placeholder-youtube-video embed-responsive embed-responsive-16by9" data-yt-url="https://www.youtube.com/embed/-xOKnDfIacA?rel=0&showinfo=0&autoplay=1"></div>-->
 <!--</div>-->
+<h2 class="text-center">We Specialize in Wrongful Termination Resulting From:</h2>
+<div class="flex-grid-half">
+
+    <div class="col">
+        <ul>
+            <li>Age Discrimination</li>
+            <li>Pregnancy Discrimination</li>
+            <li>Disability Discrimination</li>
+            <li>Emotional Distress</li>
+            <li>Family Medical Leave</li>
+            <li>Minimum Wage</li>
+            <li>Overtime</li>
+    </div>
+    <div class="col">
+        <li>Paid Sick Time Off</li>
+        <li>Race Discrimination</li>
+        <li>Religious Discrimination</li>
+        <li>Sexual Harassment</li>
+        <li>Whistleblower</li>
+        <li>Unpaid Wages</li>
+        <li>Retaliation</li>
+    </div>
+</div>
+
+
+<style>
+    .flex-grid {
+        display: flex;
+    }
+    .col {
+        flex: 1;
+    }
+    @media (max-width: 400px) {
+        .flex-grid {
+            display: block;
+        }
+    }
+    .flex-grid-half {
+        display: flex;
+        justify-content: space-between;
+        max-width: 768px;
+        margin: 0 auto;
+    }
+    .flex-grid-half .col {
+        width: 48%;
+    }
+</style>
