--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta name="description" content="Wilshire Law Firm is a award-winning personal injury, car accident, employment &amp; class action law firm. GET HELP TODAY!">
+	<meta name="description" content="If you have been fired for illegal reasons, our wrongful termination law firm can help! Please contact us today.">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1,user-scalable=0"/>
 	{{ partial "head.html" . }}
 
