updated caseType for employment

--- a/site/layouts/partials/hero.html
+++ b/site/layouts/partials/hero.html
@@ -97,6 +97,7 @@
                             </div>
                             <div class="form-group">
                                 <input name="pageurl" id="pageurl" type="hidden" value="pageurl"/>
+                                <input type="hidden" id="caseType"  name="caseType" value=Employment" />
                                 <input name="branchname" id="branchname" type="hidden" value="lp19short">
                                 <div class="messages"></div>
                             </div>
