--- a/site/layouts/partials/form.html
+++ b/site/layouts/partials/form.html
@@ -37,6 +37,7 @@
             </div>
             <div class="form-group">
                 <input type="hidden" id="pageurl-bottom"  name="pageurl-bottom" value="pageurl-bottom" />
+                <input type="hidden" id="caseType"  name="caseType" value=Employment" />
                 <input name="branchname-bottom" id="branchname-bottom" type="hidden" value="lp19short">
                 <div class="messages"></div>
             </div>
