--- a/site/layouts/partials/support-text.html
+++ b/site/layouts/partials/support-text.html
@@ -50,6 +50,7 @@
                         </div>
                         <div class="form-group">
                             <input type="hidden" id="gclid_field_bottom" name="gclid_field" value="">
+                            <input type="hidden" id="caseType"  name="caseType" value="Employment" />
                             <input name="websource" value="SEM - Google Ads" type="hidden">
                             <div class="messages"></div>
                         </div>
