--- a/site/layouts/partials/form.html
+++ b/site/layouts/partials/form.html
@@ -42,6 +42,7 @@
             </div>
             <div class="form-group">
                 <input type="hidden" id="gclid_field" name="gclid_field" value="">
+                <input type="hidden" id="caseType"  name="caseType" value="Employment" />
                 <input name="btnSubmit" id="btnSubmitBottom" type="submit" value="GET HELP NOW">
                 <div class="messages"></div>
             </div>
