--- a/site/layouts/partials/support-text.html
+++ b/site/layouts/partials/support-text.html
@@ -51,6 +51,7 @@
                         </div>
                         <div class="form-group whywlf__submit">
                             <input type="hidden" id="gclid_field_bottom" name="gclid_field" value="">
+                            <input type="hidden" id="caseType"  name="caseType" value="Employment" />
                             <input name="btnSubmit" id="btnSubmitBottom" type="submit" value="GET HELP NOW">
                             <div class="messages"></div>
                         </div>
