updated footer with invoca refire tag per support request

--- a/site/layouts/partials/end.html
+++ b/site/layouts/partials/end.html
@@ -159,4 +159,5 @@ https://io.clickguard.com/n/cHJvdGVjdG9y/je8TmfGv
         s.async = true; s.src = ('https:' === n.location.protocol ? 'https://' : 'http://' ) + v;
         var fs = n.getElementsByTagName('script')[0]; fs.parentNode.insertBefore(s, fs);
     })(window, document, 'solutions.invocacdn.com/js/invoca-latest.min.js', '1695/0270988258');
+    (Invoca.PNAPI.run() );
 </script>
