--- a/site/layouts/partials/end.html
+++ b/site/layouts/partials/end.html
@@ -17,7 +17,9 @@
 </div>
 <!-- END MOBILE CALL POPUP -->
 
-<script src="{{ .Site.BaseURL }}js/jquery-3.4.1.slim.min.js"></script>
+<!--<script src="{{ .Site.BaseURL }}js/jquery-3.4.1.slim.min.js"></script>-->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
 <script async src="{{ .Site.BaseURL }}js/lazysizes.min.js"></script>
 <link async rel="stylesheet" href="{{ .Site.BaseURL }}css/bootstrap.min.css">
 
@@ -146,21 +148,10 @@ https://io.clickguard.com/n/cHJvdGVjdG9y/je8TmfGv
     });
 </script>
 
-<script>
-  (function(i,n,v,o,c,a) { i.InvocaTagId = o; var s = n.createElement('script'); s.type = 'text/javascript';
-    s.async = true; s.src = ('https:' === n.location.protocol ? 'https://' : 'http://' ) + v;
-    var fs = n.getElementsByTagName('script')[0]; fs.parentNode.insertBefore(s, fs);
-  })(window, document, 'solutions.invocacdn.com/js/invoca-latest.min.js', '1695/0270988258');
-</script>
 
-<!-- Invoca -->
 <script>
-    (function(i,n,v,o,c,a) { i.InvocaTagId = o; var s = n.createElement('script'); s.type = 'text/javascript';
-        s.async = true; s.src = ('https:' === n.location.protocol ? 'https://' : 'http://' ) + v;
-        var fs = n.getElementsByTagName('script')[0]; fs.parentNode.insertBefore(s, fs);
-    })(window, document, 'solutions.invocacdn.com/js/invoca-latest.min.js', '1695/0270988258');
-</script>
-
-<script async>
-    (Invoca.PNAPI.run() );
+    $(document).ready(function() {
+        console.log("ran invoca on load script");
+        Invoca.PNAPI.run();
+    });
 </script>
