--- a/site/layouts/partials/end.html
+++ b/site/layouts/partials/end.html
@@ -159,6 +159,6 @@ https://io.clickguard.com/n/cHJvdGVjdG9y/je8TmfGv
 <script>
     $(document).ready(function() {
         console.log("ran invoca on load script");
-        Invoca.PNAPI.run();
+        Invoca.PNAPI.run()
     });
 </script>
